# libXDGdirs

./: .gitignore  .lgtm.yml  .travis.yml  .uncrustify.cfg.swp  AUTHORS  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_8md.html  LICENSE  README.md  README_8md.html  afterdoc_8h.html  afterdoc_8h_source.html  annotated.html  annotated_dup.js  author_8cpp.html  author_8cpp_source.html  autolink_8cpp.html  autolink_8cpp_source.html  bug.html  classA.html  classAfterdoc__Test.html  classAutolink__Test.html  classB.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classD.html  classE.html  classEnum__Test.html  classExample__Test.html  classFn__Test.html  classInclude__Test.html  classJavadoc__Test.html  classMemgrp__Test.html  (+184 more)
.githooks/: pre-commit
.github/workflows/: doxygen.yml
docs/: CMakeLists.txt  custom.css  layout.xml
examples/: CMakeLists.txt  compilation.dox  custom.c  lists.c  print.c  ver.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  classes_a.js  defines_0.js  defines_2.js  defines_3.js  enums_3.js  (+55 more)
src/: CMakeLists.txt  GenerateVersion.cmake  xdgdirs.c  xdgdirs.h  xdgdirs_ver.h.in
tests/: CMakeLists.txt  test.c  test1
